Updated documentation to reflect what the cache gateway can do. Updated the CacheOutboundGatewayTest.xml so that it has corrected comments.